# mjsoc

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  README.md  SETUP.md  compose.yaml  fly.toml  run.sh  setup.sh  shell.nix
client/: package-lock.json  package.json  tsconfig.json
client/src/: data.ts  errors.ts  index.ts  main.ts  request.ts  types.d.ts  util.ts
client/src/@types/: dom.d.ts  events.d.ts  types.d.ts
client/src/components/: component.ts  deleteButton.ts  dropdown.ts  editMembersPanel.ts  helpTooltip.ts  icons.ts  index.ts  legendPanel.ts  memberTable.ts  nametag.ts  player.ts  seatingUtils.ts  select.ts  settings.ts  sidebar.ts  successAnim.ts
client/src/components/focus/: dialog.ts  dropdown.ts  index.ts
client/src/components/input/: listener.ts  toggle.ts
client/src/components/input/focus/: dialog.ts  dropdown.ts  focusNode.ts
client/src/components/input/form/: input.ts
client/src/pages/: log.ts  qr.ts  tables.ts
docs/: DEVELOPMENT.md
public/: index.html  index.js  onsubmit.js  styles.css  tables.css
server/: .env.example  Cargo.toml  run.sh
server/src/cli/: main.rs
server/src/lib/: env.rs  mod.rs  qr.rs  signature.rs  util.rs
server/src/web/: auth.rs  config.rs  main.rs
server/src/web/components/: mod.rs  page.rs  qr.rs
server/src/web/data/: errors.rs  json.rs  mod.rs  mutator.rs  sqlite.rs  structs.rs
server/src/web/google/: http_client.rs
server/src/web/pages/: auth.rs  index.rs  login.rs  logo.rs  mod.rs  session_week.rs
server/src/web/pages/mahjong/: data.rs  log.rs  mod.rs  players.rs  tables.rs
server/src/web/pages/qr/: data.rs  page.rs
server/src/web/pages/register_attendance/: data.rs  mod.rs  page.rs
src/: auth.rs  env.rs  main.rs  qr.rs  rate_limit_handler.rs  session_week.rs  sheets.rs  signature.rs  util.rs  week_data.rs
src/cli/: main.rs
src/components/: already_authenticated.rs  error.rs  mod.rs  qr.rs
src/errors/: either_error.rs  impl_response_error.rs  insert_member_error.rs  mod.rs  name_empty.rs  name_error.rs  name_too_long.rs  signature_error.rs
src/google/: auth.rs  mod.rs  sheets.rs
src/lib/: mod.rs  qr.rs
src/pages/: auth.rs  index.rs  login.rs  logo.rs  qr.rs  register_attendance.rs  session_week.rs
src/pages/qr/: data.rs  page.rs
src/pages/register_attendance/: data.rs  page.rs
src/rate_limit/: mod.rs  rate_limit_handler.rs
src/web/: auth.rs  mahjong.rs  mahjongdata.rs  main.rs  notification.rs
src/web/components/: page.rs  qr.rs
src/web/data/: json.rs  mod.rs  mutator.rs
src/web/errors/: admin_password_error.rs  name_error.rs
src/web/google/: http_client.rs
src/web/pages/: auth.rs  index.rs  logo.rs  mod.rs  session_week.rs
src/web/pages/mahjong/: data.rs  log.rs  mod.rs  players.rs  settings.rs  tables.rs
src/web/pages/qr/: page.rs
src/web/pages/register_attendance/: data.rs  mod.rs  page.rs
src/web/rate_limit/: quota.rs
