[package]
name = "mjsoc-attendance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4"
circular-buffer = "0.1.3"
const_format = "0.2.31"
dotenv = "0.15.0"
google-sheets4 = "5.0.3"
maud = "0.25.0"
qrcode-generator = "4.1.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4"] }
