[package]
name = "mjsoc-attendance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-governor = "0.5.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4"
argon2 = "0.5.2"
base64 = "0.21.4"
chrono = "0.4.31"
circular-buffer = "0.1.3"
dotenv = "0.15.0"
futures-util = "0.3.29"
google-sheets4 = "5.0.3"
maud = "0.25.0"
qrcode-generator = "4.1.9"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
ring = "0.17.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4"] }
