[package]
name = "mjsoc-attendance"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"


[[bin]]
name = "web"
path = "src/web/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-governor = "0.5.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4"
argon2 = "0.5.2"
base64 = "0.21.4"
chrono = { version = "0.4.31", features = ["serde"] }
circular-buffer = "0.1.3"
clap = { version = "4.5.2", features = ["derive"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures-util = "0.3.29"
google-sheets4 = "5.0.3"
maud = "0.25.0"
qrcode-generator = "4.1.9"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
ring = "0.17.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio", "macros"] }
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["v4"] }
zip = "0.6.6"
